--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,151 @@
+/* Imported Typeface Files */
+
+@font-face {
+    font-family:Lato;
+    src: url(../fonts/lato-regular.ttf);
+    font-style:normal;
+    font-weight:normal;
+}
+@font-face {
+
+    font-family:Alfa Slab One;
+    src: url(../fonts/alfa-slab-one-regular.ttf);
+    font-style:normal;
+    font-weight:normal;
+}
+
+
+/* Root */
+
 html {
-  font-family: sans-serif;
     font-size:16px;
 }
 
-header, 
-main {
-    
+
+/* Body & Main  */
+
+body {
+    font-family:Lato, Arial, sans-serif;
+    font-size:1rem;
+    padding:1rem;
+    min-width:39rem;
+    max-width:50rem;
     margin:0 auto;
-    width:80%;
+}
+main {
+    background-color:#ddd;
+    background-image:url(../images/wrinkled-white-paper-background.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    border:1px solid #333;
 }
 
-table {
-  border-collapse: collapse;
-  border: 2px solid rgb(200,200,200);
-  letter-spacing: 1px;
-  font-size: 0.75rem;
-    width:100%;
-    max-width:1920px;
+/* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
+
+/* NO changes should be made to any of the code above. */
+
+/* The first heading style rule has been completed for you. Examine it carefully
+   to get an idea of some of the style properties you will need to use; then
+   complete the style code according to the instructions in Canvas. */
+
+/* NOTE: While you will be using some of the same CSS properties, the VALUES 
+   may need to be different in order to style the page correctly. */
+
+/* Headings  */
+
+h1 {
+    text-transform: uppercase;
+    font-size: 6rem;
+    margin: 0;
+    letter-spacing: .5rem;
+    color:darkred; 
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
 }
 
-td, th {
-  border: 1px solid rgb(190,190,190);
-  padding: .625rem 1.25rem;
+h2 { text-transform: uppercase;
+    font-size: 3rem;
+    margin: 0;
+    letter-spacing: 0.4rem;
+    color:darkred; 
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
 }
 
-th {
-  background-color: rgb(235,235,235);
+
+h3 {text-transform: uppercase;
+    font-size: 2rem;
+    margin: 0;
+    color:#000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+    text-shadow: none; 
+    font-weight: normal;
+
 }
 
-td {
-  text-align: center;
+h4 {text-transform: uppercase;
+    font-size: 1.5rem;
+    margin: 0;
+    letter-spacing: 0.25rem;
+    padding-bottom: 1.125rem;
+    color:darkred; 
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    text-align:center;
+    font-family:'Alfa Slab One', Garamond, serif;
+    font-weight: normal;
+}
+h4 span {
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0.8rem; 
+    padding-right: 0.8rem; 
+  }
+h5{
+    font-size:  1rem; 
+    padding: 0.8rem;
+    color: #fff;
+    background-color: #333;
+    text-align: center;
+    font-family: 'lato';
+    font-weight: normal;
+}
+    
+/* Section & Paragraph */
+section{
+    margin-top: 0.8rem;
 }
 
-tr:nth-child(even) td {
-  background-color: rgb(250,250,250);
+p {
+    margin: 1rem 0;
+    padding: 0 1rem;
+    width: 90%;
+    text-align: left;
 }
 
-tr:nth-child(odd) td {
-  background-color: rgb(245,245,245);
-}
-
-col:nth-child(2) {
-    border:2px solid #000;
-}
-
-caption {
-  padding: .625rem;
-}
+/* Image & Figure */
 
 img {
-    
-    width:100%; max-width:4.53125rem;
-    
+    width: 100%;
+    margin: 0 auto;
+    max-width: 800rem;
+}
+
+figure {
+    margin-bottom: 2rem;
+}
+
+figcaption {
+    padding-top: 0.8rem;
+    text-align: right;
+}
+
+
+/* Footer */
+
+footer {
+    padding: 1rem 1rem 1rem 1rem;
+    border-top: 2rem solid #333;
 }
